# stockscraper

./: .gitignore  README.md  pipeline.py
src/: CHttpsGet.cpp  CHttpsGet.h  CMakeLists.txt  CStocks.cpp  CStocks.h  common.cpp  common.h  conanfile.py  main.cpp
src-cli/: CMakeLists.txt  conanfile.py  main.cpp
src-cli/test_package/: conanfile.py
src/public/: stockscraper.cpp  stockscraper.h
src/test_package/: conanfile.py
test/ClangFormatTestConan/: conanfile.py
test/ClangFormatToolConan/: conandata.yml  conanfile.py
test/ClangToolsConan/: conandata.yml  conanfile.py
test/ClangToolsTestConan/: conanfile.py
test/GTestTestConan/: CMakeLists.txt  conanfile.py  test.cpp
test_package/: conanfile.py
